--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
       <h1>TechMag<span>2000</span></h1>
       <p>Le magazine qui explore les technologies du futur</p>
     </header>
+    <main>
+      <div>
+        <h2>
+          Toujours plus de drône dans le ciel
+        </h2>
+        <p>Publié le 10 février 2025 par James Webb</p>
+      </div>
+    </main>
+    <footer>
+
+    </footer>
 
   </body>
 </html>
