--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
       <h1>TechMag<span>2000</span></h1>
       <p>Le magazine qui explore les technologies du futur</p>
     </header>
+    <div>
+     <h2>
+       Notre magazine
+     </h2>
+     <p>"I just knew it! Well, I wasn't gonna let you get all the credit and 
+       take all the reward. Hey, I knew there was more to you than money. 
+       Oh, no! Oh, my! Artoo! Can you hear me?""
+    </p>
+  </div>
     <main>
-      <div>
-        <h2>
-          Toujours plus de drône dans le ciel
-        </h2>
-        <p>Publié le 10 février 2025 par James Webb</p>
-      </div>
+      <article>
+        <h1>
+          
+        </h1>
+      </article>
     </main>
     <footer>
 
