add-content-article-1

--- a/index.html
+++ b/index.html
@@ -23,8 +23,21 @@
     <main>
       <article>
         <h1>
-          
+          Toujours plus de drône dans le ciel
         </h1>
+        <p>
+          Your friend is quite a mercenary. 
+          I wonder if he really cares about anything...or anyone. 
+          I care! So...what do you think of her, Han? I'm trying not to, kid! 
+          Good... Still, she's got a lot of spirit. I don't know, what do you 
+          think? Do you think a princess and a guy like me... No!
+        </p>
+        <figure>
+          <img src="14-techmag-ressources/drone.jpg" alt="drone en vole">
+          <figcaption>
+           Le drône est-il le meilleur ami de l'homme?
+          </figcaption>
+        </figure>
       </article>
     </main>
     <footer>
