--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
           </figcaption>
         </figure>
       </article>
+      <article>
+        <h1>
+
+        </h1>
+        <p>
+
+        </p>
+        <figure>
+          <img src="" alt="">
+          <figcaption>
+
+          </figcaption>
+        </figure>
+        <p>
+          
+        </p>
+      </article>
     </main>
     <footer>
 
