add-content-article-2

--- a/index.html
+++ b/index.html
@@ -41,24 +41,27 @@
       </article>
       <article>
         <h1>
-
+          Internet, c'était mieux avant
         </h1>
         <p>
-
-        </p>
-        <figure>
-          <img src="" alt="">
-          <figcaption>
-
-          </figcaption>
-        </figure>
-        <p>
-          
+          Yes. Our scout ships have reached Dantooine. They found the remains 
+          of a Rebel base, but they estimate that it has been deserted
+         <figure>
+           <img src="file:///Users/enoducotterd/Sites/14-techmag/14-techmag-ressources/pc.jpg" 
+           alt="image d'un ordinateur">
+           <figcaption>
+            Au moins on peut toujours changer son fond d'écran
+           </figcaption>
+         </figure>
+         for some time. They are now conducting an extensive search of 
+         the surrounding systems.
         </p>
       </article>
     </main>
     <footer>
-
+      <p>
+        eikon // 2021-2022
+      </p>
     </footer>
 
   </body>
