--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
            Le drône est-il le meilleur ami de l'homme?
           </figcaption>
         </figure>
+        <p>
+          en lire plus
+        </p>
       </article>
       <article>
         <h1>
@@ -57,6 +60,7 @@
          the surrounding systems.
         </p>
       </article>
+      <p>en lire plus</p>
     </main>
     <footer>
       <p>
