--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
   </head>
   <body>
     <header>
-      <h1>TechMag<span>2000</span></h1>
+      <h1 class="site-header">TechMag <em>2000</em></h1>
       <p>Le magazine qui explore les technologies du futur</p>
     </header>
-    <div>
-     <h2>
+     <div class="chapeau">
+      <h2>
        Notre magazine
-     </h2>
+      </h2>
+      <p>publié le <span class="date">10 février 2025</span> par <span class="auteur">
+         James Webb
+       </span>
+      </p>
+    </header>
      <p>"I just knew it! Well, I wasn't gonna let you get all the credit and 
        take all the reward. Hey, I knew there was more to you than money. 
        Oh, no! Oh, my! Artoo! Can you hear me?""
@@ -22,6 +27,7 @@
   </div>
     <main>
       <article>
+        <header></header>
         <h1>
           Toujours plus de drône dans le ciel
         </h1>
@@ -38,9 +44,7 @@
            Le drône est-il le meilleur ami de l'homme?
           </figcaption>
         </figure>
-        <p>
-          en lire plus
-        </p>
+        <a href="">en lire plus</a>
       </article>
       <article>
         <h1>
@@ -60,7 +64,7 @@
          the surrounding systems.
         </p>
       </article>
-      <p>en lire plus</p>
+      <a href="">en lire plus</a>
     </main>
     <footer>
       <p>
