--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
     <title></title>
   </head>
   <body>
-    <header>
-      <h1 class="site-header">TechMag <em>2000</em></h1>
+    <header class="site-header">
+      <h1>TechMag <em>2000</em></h1>
       <p>Le magazine qui explore les technologies du futur</p>
     </header>
      <div class="chapeau">
       <h2>
        Notre magazine
       </h2>
-      <p>publié le <span class="date">10 février 2025</span> par <span class="auteur">
-         James Webb
-       </span>
       </p>
-    </header>
      <p>"I just knew it! Well, I wasn't gonna let you get all the credit and 
        take all the reward. Hey, I knew there was more to you than money. 
        Oh, no! Oh, my! Artoo! Can you hear me?""
@@ -27,10 +23,14 @@
   </div>
     <main>
       <article>
-        <header></header>
-        <h1>
-          Toujours plus de drône dans le ciel
-        </h1>
+        <header>
+          <h1>
+            Toujours plus de drône dans le ciel
+          </h1>
+          <p>publié le <span class="date">10 février 2025</span> par <span class="auteur">
+            James Webb
+          </span>
+        </header>
         <p>
           Your friend is quite a mercenary. 
           I wonder if he really cares about anything...or anyone. 
@@ -39,7 +39,7 @@
           think? Do you think a princess and a guy like me... No!
         </p>
         <figure>
-          <img src="14-techmag-ressources/drone.jpg" alt="drone en vole">
+          <img src="img/drone.jpg" alt="drone en vole">
           <figcaption>
            Le drône est-il le meilleur ami de l'homme?
           </figcaption>
@@ -47,14 +47,19 @@
         <a href="">en lire plus</a>
       </article>
       <article>
-        <h1>
-          Internet, c'était mieux avant
-        </h1>
+        <header>
+          <h1>
+            Internet, c'était mieux avant
+          </h1>
+          <p>publié le <span class="date">7 janvier 2025 </span>par <span class="auteur">
+             arthur Poulas</span>
+          </p>
+        </header>
         <p>
           Yes. Our scout ships have reached Dantooine. They found the remains 
           of a Rebel base, but they estimate that it has been deserted
          <figure>
-           <img src="file:///Users/enoducotterd/Sites/14-techmag/14-techmag-ressources/pc.jpg" 
+           <img src="img/pc.jpg" 
            alt="image d'un ordinateur">
            <figcaption>
             Au moins on peut toujours changer son fond d'écran
@@ -63,8 +68,8 @@
          for some time. They are now conducting an extensive search of 
          the surrounding systems.
         </p>
+        <a class="more-content" href="">en lire plus</a>
       </article>
-      <a href="">en lire plus</a>
     </main>
     <footer>
       <p>
