article.html-creation

--- a/articles.html
+++ b/articles.html
@@ -44,9 +44,7 @@
            Le drône est-il le meilleur ami de l'homme?
           </figcaption>
         </figure>
-        <a class="more-content" href="#article-1">EN LIRE PLUS</a>
-      </article>
-      <article>
+        <a href="">en lire plus</a>
         <header>
           <h1>
             Internet, c'était mieux avant
@@ -68,7 +66,7 @@
          for some time. They are now conducting an extensive search of 
          the surrounding systems.
         </p>
-        <a class="more-content" href="#article-2">EN LIRE PLUS</a>
+        <a class="more-content" href="">en lire plus</a>
       </article>
     </main>
     <footer>
