--- a/articles.html
+++ b/articles.html
@@ -24,12 +24,15 @@
     <main>
       <article>
         <header>
+          <figure>
+            <img src="/img/ipad.jpg" alt="">
+            <figcaption>
+
+            </figcaption>
+          </figure>
           <h1>
             Toujours plus de drône dans le ciel
           </h1>
-          <p>publié le <span class="date">10 février 2025</span> par <span class="auteur">
-            James Webb
-          </span>
         </header>
         <p>
           Your friend is quite a mercenary. 
@@ -39,12 +42,11 @@
           think? Do you think a princess and a guy like me... No!
         </p>
         <figure>
-          <img src="img/drone.jpg" alt="drone en vole">
+          <img src="img/materiel.jpg" alt="materiel électronique">
           <figcaption>
            Le drône est-il le meilleur ami de l'homme?
           </figcaption>
         </figure>
-        <a href="">en lire plus</a>
         <header>
           <h1>
             Internet, c'était mieux avant
@@ -57,8 +59,8 @@
           Yes. Our scout ships have reached Dantooine. They found the remains 
           of a Rebel base, but they estimate that it has been deserted
          <figure>
-           <img src="img/pc.jpg" 
-           alt="image d'un ordinateur">
+           <img src="img/circuits.jpg"
+           alt="images de circuits en tout genres">
            <figcaption>
             Au moins on peut toujours changer son fond d'écran
            </figcaption>
@@ -66,7 +68,6 @@
          for some time. They are now conducting an extensive search of 
          the surrounding systems.
         </p>
-        <a class="more-content" href="">en lire plus</a>
       </article>
     </main>
     <footer>
