add-link+practicles-modifications

--- a/articles.html
+++ b/articles.html
@@ -13,51 +13,45 @@
     </header>
      <div class="chapeau">
       <h2>
-       Notre magazine
+        Toujours plus de drône dans le ciel
       </h2>
-      </p>
-     <p>"I just knew it! Well, I wasn't gonna let you get all the credit and 
-       take all the reward. Hey, I knew there was more to you than money. 
-       Oh, no! Oh, my! Artoo! Can you hear me?""
+     <p>
+       Publié le 10 février 2025 par James Webb
     </p>
   </div>
     <main>
       <article>
         <header>
           <figure>
-            <img src="/img/ipad.jpg" alt="">
+            <img src="img/ipad_hand.jpg" alt="main et écran tactile">
             <figcaption>
-
+              vivre connecté, 365 jours par ans.
             </figcaption>
           </figure>
-          <h1>
+          <h1 id="article-1">
             Toujours plus de drône dans le ciel
           </h1>
         </header>
         <p>
-          Your friend is quite a mercenary. 
-          I wonder if he really cares about anything...or anyone. 
-          I care! So...what do you think of her, Han? I'm trying not to, kid! 
-          Good... Still, she's got a lot of spirit. I don't know, what do you 
-          think? Do you think a princess and a guy like me... No!
+          The battle station is heavily shielded and carries a firepower greater 
+          than half the star fleet. It's defenses are designed around a direct 
+          large-scale assault. A small one-man fighter should be able to 
+          penetrate the outer defense.
         </p>
         <figure>
           <img src="img/materiel.jpg" alt="materiel électronique">
           <figcaption>
-           Le drône est-il le meilleur ami de l'homme?
+           The videographer 2.0 toolkit
           </figcaption>
         </figure>
-        <header>
-          <h1>
-            Internet, c'était mieux avant
+          <h1 id="article-2">
+            All your base are belong to us!
           </h1>
-          <p>publié le <span class="date">7 janvier 2025 </span>par <span class="auteur">
-             arthur Poulas</span>
+          <p>
+           All wings report in. Red Ten standing by.
+           Red Seven standing by. Red Three standing by. Red Six standing by.
+            Red Nine standing by. Red Two standing by. Red Eleven standing by
           </p>
-        </header>
-        <p>
-          Yes. Our scout ships have reached Dantooine. They found the remains 
-          of a Rebel base, but they estimate that it has been deserted
          <figure>
            <img src="img/circuits.jpg"
            alt="images de circuits en tout genres">
@@ -65,9 +59,11 @@
             Au moins on peut toujours changer son fond d'écran
            </figcaption>
          </figure>
-         for some time. They are now conducting an extensive search of 
-         the surrounding systems.
-        </p>
+         <h1>Electronic embarqué!</h1>
+         <p>Didn't we just leave this party? What kept you? We ran into some 
+           old friends. Is the ship all right?
+         </p>
+         <a class="more-content" href="#back-articles">Retours aux articles</a>
       </article>
     </main>
     <footer>
