--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   </head>
   <body>
     <header class="site-header">
-      <h1>TechMag <em>2000</em></h1>
+      <h1 id="back-asrticles">TechMag <em>2000</em></h1>
       <p>Le magazine qui explore les technologies du futur</p>
     </header>
      <div class="chapeau">
       <h2>
        Notre magazine
       </h2>
-      </p>
      <p>"I just knew it! Well, I wasn't gonna let you get all the credit and 
        take all the reward. Hey, I knew there was more to you than money. 
        Oh, no! Oh, my! Artoo! Can you hear me?""
