--- a/articles.html
+++ b/articles.html
@@ -28,7 +28,7 @@
               vivre connecté, 365 jours par ans.
             </figcaption>
           </figure>
-          <h1 id="article-1">
+          <h1>
             Toujours plus de drône dans le ciel
           </h1>
         </header>
@@ -44,7 +44,7 @@
            The videographer 2.0 toolkit
           </figcaption>
         </figure>
-          <h1 id="article-2">
+          <h1>
             All your base are belong to us!
           </h1>
           <p>
@@ -63,7 +63,7 @@
          <p>Didn't we just leave this party? What kept you? We ran into some 
            old friends. Is the ship all right?
          </p>
-         <a class="more-content" href="#back-articles">Retours aux articles</a>
+         <a class="more-content" href="index.html">Retours aux articles</a>
       </article>
     </main>
     <footer>
