--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
            Le drône est-il le meilleur ami de l'homme?
           </figcaption>
         </figure>
-        <a class="more-content" href="#article-1">EN LIRE PLUS</a>
+        <a class="more-content" href="articles.html">EN LIRE PLUS</a>
       </article>
       <article>
         <header>
@@ -67,7 +67,7 @@
          for some time. They are now conducting an extensive search of 
          the surrounding systems.
         </p>
-        <a class="more-content" href="#article-2">EN LIRE PLUS</a>
+        <a class="more-content" href="articles.html">EN LIRE PLUS</a>
       </article>
     </main>
     <footer>
