ancre, button, title

--- a/articles.html
+++ b/articles.html
@@ -63,7 +63,9 @@
          <p>Didn't we just leave this party? What kept you? We ran into some 
            old friends. Is the ship all right?
          </p>
-         <a class="more-content" href="index.html">Retours aux articles</a>
+        <button class="more-content">
+          <a href="index.html">Retours aux articles</a>
+        </button> 
       </article>
     </main>
     <footer>
