--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;1,802&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@399;699&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css">
@@ -8,7 +14,7 @@
   </head>
   <body>
     <header class="site-header">
-      <h1 id="back-asrticles">TechMag <em>2000</em></h1>
+      <h1>TechMag <em>2000</em></h1>
       <p>Le magazine qui explore les technologies du futur</p>
     </header>
      <div class="chapeau">
@@ -43,7 +49,9 @@
            Le drône est-il le meilleur ami de l'homme?
           </figcaption>
         </figure>
-        <a class="more-content" href="articles.html">EN LIRE PLUS</a>
+        <button class="more-content">
+         <a href="articles.html">En lire plus</a>
+        </button> 
       </article>
       <article>
         <header>
@@ -67,7 +75,9 @@
          for some time. They are now conducting an extensive search of 
          the surrounding systems.
         </p>
-        <a class="more-content" href="articles.html">EN LIRE PLUS</a>
+        <button class="more-content">
+         <a href="articles.html">En lire plus</a>
+        </button> 
       </article>
     </main>
     <footer>
