--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h1>
             Toujours plus de drône dans le ciel
           </h1>
-          <p>publié le <span class="date">10 février 2025</span> par <span class="auteur">
+          <p class="issue">publié le <span class="date">10 février 2025</span> par <span class="auteur">
             James Webb</span>
           </p>  
         </header>
@@ -61,7 +61,7 @@
           <h1>
             Internet, c'était mieux avant
           </h1>
-          <p>publié le <span class="date">7 janvier 2025 </span>par <span class="auteur">
+          <p class="issue">publié le <span class="date">7 janvier 2025 </span>par <span class="auteur">
              arthur Poulas</span>
           </p>
         </header>
