--- a/articles.html
+++ b/articles.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <title>TechMag-2000</title>
   </head>
   <body>
     <header class="site-header">
       <h1>TechMag <em>2000</em></h1>
       <p>Le magazine qui explore les technologies du futur</p>
     </header>
-    <div class="chapeau">
+    <div class="hat">
       <h2>
         Toujours plus de drône dans le ciel
       </h2>
